@@ -404,7 +404,8 @@ public class BrokerMsalController extends BaseController {
                 saveMsaAccountToCache(resultBundle, (MsalOAuth2TokenCache) parameters.getOAuth2TokenCache());
             }
 
-            result = new MsalBrokerResultAdapter().getAcquireTokenResultFromResultBundle(resultBundle);
+            verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
+            result = mResultAdapter.getAcquireTokenResultFromResultBundle(resultBundle);
         } catch (final BaseException | ExecutionException e) {
             Telemetry.emit(
                     new ApiEndEvent()
@@ -522,7 +523,7 @@ public class BrokerMsalController extends BaseController {
                         if (resultBundle == null) {
                             throw mResultAdapter.getExceptionForEmptyResultBundle();
                         }
-
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         return mResultAdapter.getDeviceCodeFlowAuthResultFromResultBundle(resultBundle);
                     }
 
@@ -579,6 +580,8 @@ public class BrokerMsalController extends BaseController {
                         if (resultBundle == null) {
                             throw mResultAdapter.getExceptionForEmptyResultBundle();
                         }
+
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
 
                         AcquireTokenResult acquireTokenResult = mResultAdapter.getDeviceCodeFlowTokenResultFromResultBundle(resultBundle);
                         // If authorization_pending continue polling for token
@@ -649,6 +652,8 @@ public class BrokerMsalController extends BaseController {
                         if (resultBundle == null) {
                             throw mResultAdapter.getExceptionForEmptyResultBundle();
                         }
+
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         return mResultAdapter.getAcquireTokenResultFromResultBundle(resultBundle);
                     }
 
@@ -708,6 +713,8 @@ public class BrokerMsalController extends BaseController {
                         if (resultBundle == null) {
                             throw mResultAdapter.getExceptionForEmptyResultBundle();
                         }
+
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         return mResultAdapter.getAccountsFromResultBundle(resultBundle);
                     }
 
@@ -762,6 +769,7 @@ public class BrokerMsalController extends BaseController {
                     @Override
                     public @NonNull
                     Boolean extractResultBundle(final @Nullable Bundle resultBundle) throws BaseException {
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         mResultAdapter.verifyRemoveAccountResultFromBundle(resultBundle);
                         return true;
                     }
@@ -879,6 +887,7 @@ public class BrokerMsalController extends BaseController {
                         if (resultBundle == null) {
                             throw mResultAdapter.getExceptionForEmptyResultBundle();
                         }
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         return mResultAdapter.getAccountsFromResultBundle(resultBundle);
                     }
 
@@ -951,6 +960,7 @@ public class BrokerMsalController extends BaseController {
                     @Override
                     public @NonNull
                     Boolean extractResultBundle(final @Nullable Bundle resultBundle) throws BaseException {
+                        verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                         mResultAdapter.verifyRemoveAccountResultFromBundle(resultBundle);
                         return true;
                     }
@@ -979,7 +989,7 @@ public class BrokerMsalController extends BaseController {
     }
 
     @Override
-    public GenerateShrResult generateSignedHttpRequest(@NonNull final GenerateShrCommandParameters parameters) throws Exception {
+    public GenerateShrResult generateSignedHttpRequest(@NonNull final GenerateShrCommandParameters parameters) throws BaseException {
         return mBrokerOperationExecutor.execute(parameters, new BrokerOperation<GenerateShrResult>() {
 
             private String negotiatedBrokerProtocolVersion;
@@ -1008,7 +1018,7 @@ public class BrokerMsalController extends BaseController {
                 if (null == resultBundle) {
                     throw mResultAdapter.getExceptionForEmptyResultBundle();
                 }
-
+                verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                 return mResultAdapter.getGenerateShrResultFromResultBundle(resultBundle);
             }
 
@@ -1063,6 +1073,7 @@ public class BrokerMsalController extends BaseController {
                     throw mResultAdapter.getExceptionForEmptyResultBundle();
                 }
 
+                verifyBrokerVersionIsSupported(resultBundle, parameters.getRequiredBrokerProtocolVersion());
                 return mResultAdapter.getAcquirePrtSsoTokenResultFromBundle(resultBundle);
             }
 
@@ -1153,6 +1164,32 @@ public class BrokerMsalController extends BaseController {
             throw new ClientException(ClientException.AUTH_SCHEME_NOT_SUPPORTED,
                     "The min broker protocol version for PopAuthenticationSchemeWithClientKey should be equal or more than 11.0."
                             + " Current required version is set to: " + parameters.getRequiredBrokerProtocolVersion());
+        }
+    }
+
+    /**
+     * Check if have received broker version not supported error.
+     * @param resultBundle Result bundle from a broker operation.
+     * @param requiredBrokerProtocolVersion Required broker protocol version sent in request.
+     * @throws UnsupportedBrokerException if result contains broker not supported error.
+     */
+    private void verifyBrokerVersionIsSupported(@Nullable final Bundle resultBundle, @Nullable final String requiredBrokerProtocolVersion) throws UnsupportedBrokerException {
+        final String methodTag = TAG + ":verifyBrokerVersionIsSupported";
+        if (resultBundle == null) {
+            Logger.info(methodTag, "result bundle is null");
+            return;
+        }
+
+        // check if result bundle contains unsupported broker version exception
+        try {
+            final BrokerResult brokerResult = mResultAdapter.brokerResultFromBundle(resultBundle);
+            if (!brokerResult.isSuccess()
+                    && ErrorStrings.UNSUPPORTED_BROKER_VERSION_ERROR_CODE.equals(brokerResult.getErrorCode())) {
+                mHelloCache.saveHandshakeError(requiredBrokerProtocolVersion, CLIENT_MAX_PROTOCOL_VERSION);
+                throw new UnsupportedBrokerException(mActiveBrokerPackageName);
+            }
+        } catch (final ClientException e) {
+            Logger.error(methodTag, "Unable to read broker result from result bundle", e);
         }
     }
 }
