@@ -16,6 +16,7 @@ V.NEXT
 - [MINOR] Emit number of concurrent silent requests in telemetry (#2093)
 - [PATCH] Fix missing visibility of the LTW app (#2097)
 - [MINOR] Add span names for storage and encryption spans (#2104)
+- [MINOR] Invalid required broker protocol version check in Acquire Token/Acquire Token Silent (#2101)
 
 V.13.0.1
 ----------
